tests/test_files_pa3/external/errors/ThisTestError.ic
class ThisTestError{

	boolean bool;
	
	static void main(string[] args){}
	
	static void alt_ctrl_delete(int i){
		this.bool = false;
		int j = also(this);
	}
	
	static int also(ThisTestError obj){
		return 33;
	}	
}
